# ogentic-audit

./: .editorconfig  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  pyproject.toml  rustfmt.toml
.claude/: _factory-manifest.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dco.yml  kms-integration.yml  kms-smoke.yml  ogenticai-reviewer.yml  release-cli.yml  release.yml  uat-override.yml  wheels.yml
crates/ogentic-audit-cli/: Cargo.toml
crates/ogentic-audit-cli/src/: cli.rs  exit.rs  keysource.rs  main.rs  output.rs  pdf.rs
crates/ogentic-audit-cli/src/commands/: export.rs  head.rs  mod.rs  show.rs  verify.rs  version.rs
crates/ogentic-audit-cli/tests/: cli_vectors.rs  cli_verify.rs
crates/ogentic-audit-core/: Cargo.toml
crates/ogentic-audit-core/src/: cbor.rs  key.rs  lib.rs  reader.rs  segment.rs  sync_compat.rs  verifier.rs  writer.rs
crates/ogentic-audit-core/tests/: crash_recovery.rs  property_round_trip.rs  reader_round_trip.rs  tamper_matrix.rs  vector_conformance.rs  verifier_conformance.rs  writer_recovery.rs
crates/ogentic-audit-core/tests/common/: mod.rs
crates/ogentic-audit-keychain/: Cargo.toml
crates/ogentic-audit-keychain/src/: backend.rs  lib.rs
crates/ogentic-audit-kms/: Cargo.toml  README.md
crates/ogentic-audit-kms/src/: aws.rs  envelope.rs  error.rs  key.rs  lib.rs  provider.rs  redact.rs
crates/ogentic-audit-kms/tests/: adversarial.rs  inmemory_provider.rs  localstack.rs  redaction.rs
docs/adr/: 0001-on-disk-format.md  0002-server-side-kms-key-sourcing.md
docs/integrations/: homebrew-formula.md  server-side-kms.md  sotto-desktop.md
docs/legal/: court-defensibility.md
docs/security/: key-rotation.md  threat-model.md
docs/spec/: v0.1.md  violation-report.md
examples/sotto-desktop-tauri/: README.md
python/docs/: api.md  conf.py  index.md  quickstart.md  requirements.txt
python/ogentic-audit-py/: Cargo.toml
python/ogentic-audit-py/src/: errors.rs  key.rs  lib.rs  reader.rs  verify.rs  writer.rs
python/ogentic_audit/: __init__.py  __init__.pyi
python/tests/: test_round_trip.py  test_smoke.py  test_vector_synthesis.py
samples/matter-2024-CV-3047/: README.md
samples/matter-2024-CV-3047-tampered/: README.md
samples/matter-2024-CV-3047-tampered/matter-2024-CV-3047.log/: audit-0000.cbor  chain.json  inputs.json
samples/matter-2024-CV-3047/matter-2024-CV-3047.log/: audit-0000.cbor  chain.json  inputs.json
tests/vectors/v0.1/: README.md
tests/vectors/v0.1/1k-records/: audit-0000.cbor  chain.json  inputs.json
tests/vectors/v0.1/empty/: audit-0000.cbor  chain.json  inputs.json
tests/vectors/v0.1/missing-record/: audit-0000.cbor  chain.json  inputs.json
tests/vectors/v0.1/segment-rollover/: audit-0000.cbor  audit-0001.cbor  audit-0002.cbor  chain.json  inputs.json
tests/vectors/v0.1/single-record/: audit-0000.cbor  chain.json  inputs.json
tests/vectors/v0.1/tampered-byte/: audit-0000.cbor  chain.json  inputs.json
tools/: README.md  check_cbor_parity.py  gen_vectors.py
