[workspace]
resolver = "2"
members = [
    "crates/ogentic-audit-core",
    "crates/ogentic-audit-cli",
    "crates/ogentic-audit-keychain",
    "crates/ogentic-audit-kms",
    "python/ogentic-audit-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/OgenticAI/ogentic-audit"
homepage = "https://github.com/OgenticAI/ogentic-audit"
authors = ["OgenticAI <engineering@ogenticai.com>"]
readme = "README.md"
keywords = ["audit", "log", "hmac", "tamper-evident", "compliance"]
categories = ["cryptography", "data-structures", "filesystem"]

[workspace.dependencies]
ogentic-audit-core = { version = "0.1.0", path = "crates/ogentic-audit-core" }
ogentic-audit-keychain = { version = "0.1.0", path = "crates/ogentic-audit-keychain" }

# Crypto / encoding
hmac = "0.12"
sha2 = "0.10"
blake3 = "1.5"
crc32fast = "1.4"
subtle = "2.6"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
hex = "0.4"
getrandom = "0.2"

# OS keychain (used by the optional ogentic-audit-keychain crate).
# Pinned at the workspace level so consumers see a single, audited version
# in `cargo audit` output.
keyring = "3"

# Platform fs sync (F_FULLFSYNC on macOS — see crate::sync_compat).
# rustix gives us safe bindings without bringing libc into our own
# `forbid(unsafe_code)` surface.
rustix = { version = "1", features = ["fs"] }

# Optional memory-mapped reader (see crate::reader::ReadStrategy::Mmap).
# Default reader strategy is plain buffered I/O; mmap is a configurable
# opt-in for very-large-log analytical reads.
memmap2 = "0.9"

# Errors / utilities
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Bindings
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }

# Testing
proptest = "1.4"
rstest = "0.21"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[profile.release-debuginfo]
inherits = "release"
strip = "none"
debug = true
