[package]
name = "ogentic-audit-cli"
description = "ogentic-audit CLI — verify, inspect, and export tamper-evident audit logs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ogentic-audit"
path = "src/main.rs"

[dependencies]
ogentic-audit-core = { workspace = true }
ogentic-audit-keychain = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
