[package]
name = "ogentic-audit"
description = "ogentic-audit CLI — verify, inspect, and export tamper-evident audit logs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ogentic-audit"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ogentic-audit-core = { workspace = true }
ogentic-audit-keychain = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
# Used by `keysource` to wipe transient key bytes (env-string, file-bytes,
# hex-decoded array) before they fall off the stack/heap. See OGE-836.
zeroize = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
