[package]
name = "ogentic-audit-core"
description = "HMAC-SHA256 chained, append-only audit log — core library (writer, reader, verifier, key handle)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "ogentic_audit_core"
path = "src/lib.rs"

# docs.rs build configuration: ensure intra-doc links resolve and the
# rendered page links to the canonical source repo.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hmac = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
# `ciborium` is intentionally NOT a dep here — the CBOR codec in
# `src/cbor.rs` is hand-rolled (see the file's module docs for why).
# OGE-838 removed the previously-unused workspace dep.
crc32fast = { workspace = true }
memmap2 = { workspace = true }
rustix = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
