[package]
name = "ogentic-audit-keychain"
description = "Optional OS-keychain key source for ogentic-audit (macOS Keychain, Linux Secret Service, Windows Credential Manager)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Default: OS-keychain backend on. Off-switch lets server-side consumers
# (Zashboard via OGE-460 KMS source) compile this crate with the type
# surface intact but no platform-specific code linked in.
default = ["keychain"]
keychain = ["dep:keyring", "dep:getrandom"]

[dependencies]
ogentic-audit-core = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
keyring = { workspace = true, optional = true, default-features = true }
getrandom = { workspace = true, optional = true }

[dev-dependencies]
hex = { workspace = true }
