[package]
name = "ogentic-audit-kms"
version = "0.2.0-pre"
edition = "2021"
rust-version = "1.91"
license = "Apache-2.0"
description = "Optional KMS key source for ogentic-audit (AWS KMS in v0.1; GCP Cloud KMS, Azure Key Vault in v0.2)"
repository = "https://github.com/OgenticAI/ogentic-audit"
homepage = "https://github.com/OgenticAI/ogentic-audit"
keywords = ["audit", "kms", "hmac", "tamper-evident", "court-defensible"]
categories = ["cryptography", "authentication"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["aws"]
aws = ["dep:aws-sdk-kms", "dep:aws-config"]

[dependencies]
ogentic-audit-core = { path = "../ogentic-audit-core", version = "0.2.0" }
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "1"
blake3 = "1"
# OGE-603 (envelope mode): envelope.rs holds the plaintext DEK in a
# Zeroizing<[u8; 32]> buffer; hmac + sha2 compute HMAC-SHA256 locally.
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
# Workspace MSRV is 1.91 — see workspace Cargo.toml. aws-sdk-kms's
# transitive smithy closure (aws-smithy-runtime ≥1.11) requires 1.91.1,
# so 1.91 is the effective floor for this crate when the aws feature is on.
aws-sdk-kms = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"], optional = true }
aws-config = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hex = "0.4"
